[tool.poetry]
name = "inscar"
version = "3.0.4"
description = "Calculate an incoherent scatter spectrum with arbitrary isotropic electron velocity distributions and radar pointing at oblique angles to the magnetic field"
authors = ["engeir <eirroleng@gmail.com>"]
readme = "README.rst"
documentation = "https://inscar.readthedocs.io"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = "^1.20.2"
scipy = "^1.6.2"
numba = ">=0.55.1,<0.57.0"
attrs = ">=21.4,<23.0"
importlib-metadata = ">=4.11.4,<7.0.0"

[tool.poetry.group.dev.dependencies]
matplotlib = "^3.6.2"
lmfit = "^1.1.0"
tqdm = "^4.64.1"
si-prefix = "^1.2.2"
isort = "^5.8.0"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
black = ">=22.10,<24.0"
darglint = "^1.8.1"
pyupgrade = "^3.3.1"
xdoctest = "^1.1.0"
types-attrs = "^19.1.0"
mypy = ">=0.991,<1.5"
Sphinx = "^5.1.1"
sphinx-autobuild = "^2021.3.14"
sphinx-rtd-theme = "^1.0.0"
pre-commit = ">=2.20,<4.0"
pre-commit-hooks = "^4.4.0"
sphinx-autodoc-typehints = "^1.19.2"
ruff = ">=0.0.185,<0.0.281"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
